[gd_scene load_steps=2 format=3 uid="uid://ngf5irvgldhp"]

[ext_resource type="Script" path="res://multiplayer/serverBrowser/serverBrowser.gd" id="1_ih681"]

[node name="OnlineMode" type="Node" node_paths=PackedStringArray("multiplayer_spawner", "server_browser", "lobbies_vbox", "server_count_text", "loading_text")]
script = ExtResource("1_ih681")
multiplayer_spawner = NodePath("MultiplayerSpawner")
server_browser = NodePath("ServerBrowser")
lobbies_vbox = NodePath("ServerBrowser/HSplitContainer/LobbyContainer/Lobbies")
server_count_text = NodePath("ServerBrowser/HSplitContainer/VBoxContainer2/ServerDebugText")
loading_text = NodePath("LoadingText")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="ServerBrowser" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="ServerBrowser"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="ServerBrowser/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Host" type="Button" parent="ServerBrowser/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Host"

[node name="Local" type="Button" parent="ServerBrowser/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Local"

[node name="Refresh" type="Button" parent="ServerBrowser/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Refresh"

[node name="Back" type="Button" parent="ServerBrowser/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Back"

[node name="ServerDebugText" type="Label" parent="ServerBrowser/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "1/100 Servers Shown"

[node name="LobbyContainer" type="ScrollContainer" parent="ServerBrowser/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lobbies" type="VBoxContainer" parent="ServerBrowser/HSplitContainer/LobbyContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LoadingText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Loading into lobby:
Clevertop"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ServerBrowser/HSplitContainer/VBoxContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="ServerBrowser/HSplitContainer/VBoxContainer2/Local" to="." method="_on_local_pressed"]
[connection signal="pressed" from="ServerBrowser/HSplitContainer/VBoxContainer2/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="ServerBrowser/HSplitContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
